--- a/docs/README
+++ b/docs/README
@@ -6,6 +6,11 @@ The GitHub Pages site for Yasmine is located here:
 
 ## Local Development
 
-> cd docs/yasmine-stationxml-editor
-> bundle install
-> bundle exec jekyll serve --livereload
+Locally serving the GitHub Pages documentation:
+> cd docs
+> bundle install && bundle exec jekyll serve --livereload
+
+Installing plugins:
+> sudo gem install jekyll-mermaid
+
+> bundle add kramdown-syntax-coderay
